Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
Sprint 1
Description
When sending URB_FUNCTION_GET_DESCRIPTOR_FROM_DEVICE with DescriptorType = USB_CONFIGURATION_DESCRIPTOR_TYPE, ROS asserts that
Urb->UrbControlDescriptorRequest.TransferBufferLength >= sizeof(USB_CONFIGURATION_DESCRIPTOR)
Windows does not do this and allows a partial read to succeed (e.g. to read the required size first).