[LIBUSB]: Handle configuration descriptors partial reads. By Jérôme Gardou. CORE-6634 #resolve

svn path=/trunk/; revision=57312